feat: add embedding script

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,12 +44,16 @@ install_requires =
     transformers
     SentencePiece
     faiss-cpu
+    optimum
 
 [options.extras_require]
 deepblast = deepblast
 dev = wandb; pre-commit; matplotlib
 
+[project.scripts]
+
 
 [options.entry_points]
 console_scripts =
     tmvec = tmvec.cli:main
+    embed = tmvec.embed:main
